Fix Sonarqube test results (#1499)